<resources>
    <string name="app_name">Dawak</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Address</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email</string>
    <string name="submit">SUBMIT</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_add">Add</string>
    <string name="title_activity_history">History</string>
    <string name="pill_name">Medicine name</string>
    <string name="taken_time">Taken Time</string>
    <string name="column">:</string>
    <string name="number_of_taken">Taken number</string>
    <string name="add_button">+</string>
    <string name="sub_button">-</string>
    <string name="taken_day">Taken Day</string>
    <string name="add">Add</string>
    <string name="sunday">Sunday</string>
    <string name="write_pill_name_here">Write Medicine name here</string>
    <string name="history">History</string>
    <string name="log_out">Log out</string>
    <string name="appwidget_text">Dawak</string>
    <string name="add_widget">Add widget</string>
    <string name="icon">Icon</string>
    <string name="logo">Logo</string>
    <string name="email_mes">Please enter your Email</string>
    <string name="pass_mes">Please enter your Password</string>
    <string name="dialog_mes">Logging in, Please waite.</string>
    <string name="success_mes">User logged in successfully</string>
    <string name="fail_mes">Could not Login. Please try again</string>
    <string name="reg_mes">Registering User, please wait.</string>
    <string name="reg_success_mes">Registered successfully</string>
    <string name="reg_fail_mes">Could not register. Please try again</string>
    <string name="add_float_button">Add Float Button</string>
    <string name="med">Your medicines is</string>
    <string name="Fetching_Data_Failed">Fetching Data Failed</string>
    <string name="enter_med">Please enter medicine name</string>
    <string name="enter_med_taken">Please enter your medicine taken day</string>
    <string name="pill_added_suc">pill added successful</string>
    <string name="pill_add_fail">pill added failed</string>
    <string name="Taken_Day_is">Taken Day is </string>
    <string name="at">At</string>
    <string name="on">On</string>


</resources>
