<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/draw_insets_frame_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/photo_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|enterAlwaysCollapsed"
            >
            <!--suppress AndroidLintContentDescription -->
            <ImageView
                android:id="@+id/photo"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:contentDescription="@string/logo"
                />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <LinearLayout
            android:id="@+id/meta_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_size"
                    android:text="@string/pill_name"
                    tools:text="Medicine Name"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="75"
                    />

                <EditText
                    android:id="@+id/pill_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Trufen "
                    android:hint="@string/write_pill_name_here"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="25"


                />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_size"
                    android:text="@string/taken_time"
                    tools:text="Taken Time"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="75"
                    />



                    <TimePicker
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="24dp"
                        android:timePickerMode="spinner"
                        android:layout_weight="25">

                    </TimePicker>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/number_of_taken"
                    tools:text="Taken number"
                    android:textSize="@dimen/body_size"
                    android:layout_marginStart="@dimen/text_margin"
                    android:layout_weight="25"
                    />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sub_button"
                    android:layout_weight="25"/>

                <TextView
                    android:id="@+id/taken_number_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    tools:text="0"
                    android:layout_weight="25"/>

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_button"
                    android:layout_weight="25"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/body_size"
                    android:text="@string/taken_day"
                    tools:text="Taken Day"
                    android:layout_margin="@dimen/text_margin"
                    android:layout_weight="75"
                    />

                <EditText
                    android:id="@+id/taken_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    tools:text="Sunday "
                    android:layout_weight="25"
                    android:hint="@string/sunday"/>


            </LinearLayout>

            <Button
                android:id="@+id/add_pill_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="50dp"
                android:background="@color/RoyalBlue"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="16dp"
                android:text="@string/add"
                android:textColor="@color/Black"
                android:textStyle="normal"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>